--- a/assignment4.html
+++ b/assignment4.html
@@ -1,67 +1,25 @@
+<!DOCTYPE HTML>
+<html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" type="text/css" href="cascade.css">
 <title>The Analog Specialists</title>
-<link rel="stylesheet" href="cascade.css" />
 </head>
 <body>
-<div id="wrapper">
-<div id="header">
-Welcome to my college
-</div>
-<div id="menu">
-	<div class="nav">
-    <ul>
-    <li><a href="#">HOME</a></li>
-	<li>|</li>
-	<li><a href="#">ABOUT US</a></li>
-    <li>|</li>
-	<li><a href="#">OUR COURSES</a></li>
-    <li>|</li>
-	<li><a href="#">CONTACT US</a></li>
-    <li>|</li>
-    <li><a href="#">PHOTO GALLERY</a></li>
-    </ul>
-    </div>
-</div>
-<div id="container">
-	<div id="center">
-	<img src="download.jpg" style="float:left;" /></img>
-	Jadavpur university is a famous college based in Kolkata, West Bengal. It offers various graduate engineering courses along with post-graduate courses. 
-	The following courses offered are: Computer Science Enginbeering, Electronics and Electrical Engineering, Civil and Construction Engineering
-	Jadavpur university is a famous college based in Kolkata, West Bengal. It offers various graduate engineering courses along with post-graduate courses. 
-	The following courses offered are: Computer Science Enginbeering, Electronics and Electrical Engineering, Civil and Construction Engineering
-	Jadavpur university is a famous college based in Kolkata, West Bengal. It offers various graduate engineering courses along with post-graduate courses. 
-	The following courses offered are: Computer Science Enginbeering, Electronics and Electrical Engineering, Civil and Construction Engineering
-	Jadavpur university is a famous college based in Kolkata, West Bengal. It offers various graduate engineering courses along with post-graduate courses. 
-	The following courses offered are: Computer Science Enginbeering, Electronics and Electrical Engineering, Civil and Construction Engineering
-	Jadavpur university is a famous college based in Kolkata, West Bengal. It offers various graduate engineering courses along with post-graduate courses. 
-	The following courses offered are: Computer Science Enginbeering, Electronics and Electrical Engineering, Civil and Construction Engineering
-	Jadavpur university is a famous college based in Kolkata, West Bengal. It offers various graduate engineering courses along with post-graduate courses. 
-	The following courses offered are: Computer Science Enginbeering, Electronics and Electrical Engineering, Civil and Construction Engineering
-	Jadavpur university is a famous college based in Kolkata, West Bengal. It offers various graduate engineering courses along with post-graduate courses. 
-	The following courses offered are: Computer Science Enginbeering, Electronics and Electrical Engineering, Civil and Construction Engineering
-	Jadavpur university is a famous college based in Kolkata, West Bengal. It offers various graduate engineering courses along with post-graduate courses. 
-	The following courses offered are: Computer Science Enginbeering, Electronics and Electrical Engineering, Civil and Construction Engineering
-	</div>
-    
-	</div>
-	<div style="clear:both"></div>
-	<div id="footer">
-	<div class="nav">
-    <ul>
-    <li><a href="#">HOME</a></li>
-	<li>|</li>
-	<li><a href="#">ABOUT US</a></li>
-    <li>|</li>
-	<li><a href="#">OUR COURSES</a></li>
-    <li>|</li>
-	<li><a href="#">CONTACT US</a></li>
-    <li>|</li>
-    <li><a href="#">PHOTO GALLERY</a></li>
-    </ul>
-    </div>
-	</div>
-</div>
+	<p align="middle">
+<img src="logo.png" alt="The Analog Specialists" style="width=50px;height=30px;">
+</p>
+<ul align="middle">
+  <li><a href="">Home</a></li>
+  <li><a href="">For Sale</a></li>
+  <li><a href="">Repairs</a></li>
+  <li><a href="">About</a></li>
+  <li><a href="">Contact</a></li>
+ </ul>
+ <div align="middle">
+ <img src="image.jpg" alt="Classical Piano" >
+ <img src="image1.jpg" alt="Classical Piano" style="width=50px;height=40px;">
+ <p id="one"><b>We Specialize in the sale and repair of Classical Keyboards<br>
+ 	in perticular the Fender Roades,Wurlitzer EP200 and Honer<br> Claviner</b></p>
+ </div>
 </body>
 </html>
-
